# pneumonia-diagnostic-assistant

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  convert_to_onnx.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: inference.py  inference_onnx.py  settings.py  urls.py  views.py  wsgi.py
backend/model/: resnet18_chest_xray_classifier_weights.onnx
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/ui/: button.tsx  card.tsx  contact-form.tsx
training/: convert_to_onnx.py  inference_eval.py  optimize_hyperparameters.py  optimize_prune.py  optimize_quantize.py  train.py  train_quantize_aware.py
training/utils/: helper_utils.py
